--- a/langs/swipl/Makefile
+++ b/langs/swipl/Makefile
@@ -1,6 +1,9 @@
 
 run: build
-	docker run aoc-cpp
+	docker run aoc-swipl
+
+it: build
+	docker run -it aoc-swipl
 	
 build:
-	docker build -qt aoc-cpp .
+	docker build -qt aoc-swipl .
