--- a/langs/swipl/Dockerfile
+++ b/langs/swipl/Dockerfile
@@ -1,9 +1,9 @@
-FROM gcc
+FROM swipl
 
 WORKDIR /app
 
 COPY cases cases
 
-COPY solution.cpp solution.cpp
+COPY solution.pl solution.pl
 
-CMD g++ -o solution solution.cpp && ./solution
+CMD swipl solution.pl
