--- a/langs/php/Makefile
+++ b/langs/php/Makefile
@@ -1,6 +1,6 @@
 
 run: build
-	docker run --rm aoc-cpp
+	docker run --rm aoc-php
 	
 build:
-	docker build -qt aoc-cpp .
+	docker build -qt aoc-php .
